--- a/java-crud-api-master/java-crud-api-master/src/main/resources/application.properties
+++ b/java-crud-api-master/java-crud-api-master/src/main/resources/application.properties
@@ -1,7 +1,40 @@
+### Server Configuration
 server.port=8082
+server.servlet.context-path=/
+spring.application.name=SmartContact-API
+
+### Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/barcode
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+### JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+### Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+### Logging Configuration
+logging.level.root=INFO
+logging.level.com.smartContact=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+### Jackson Configuration
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=UTC
+spring.jackson.default-property-inclusion=non_null
+
+### Application Info
+app.name=Smart Contact API
+app.version=2.0.0
+app.description=Comprehensive REST API for User Management
